[gd_scene load_steps=7 format=3 uid="uid://b4eoty55nsnff"]

[ext_resource type="Script" uid="uid://ch4wexxcrof7" path="res://gui/scripts/main_menu.gd" id="1"]
[ext_resource type="Theme" uid="uid://bexg0f6lf0tf3" path="res://gui/main_theme.tres" id="2_laybc"]
[ext_resource type="PackedScene" uid="uid://1fuql63cm1el" path="res://gui/tile_map_layer.tscn" id="2_xkvi0"]
[ext_resource type="LabelSettings" uid="uid://4e85a5adadv" path="res://gui/rule_entry_title.tres" id="3_7vpqp"]
[ext_resource type="PackedScene" uid="uid://82ptej7xfg8x" path="res://gui/settings_panel.tscn" id="3_egs2y"]
[ext_resource type="Theme" uid="uid://cmvi5035lijxk" path="res://gui/Game_Gui.tres" id="4_7vpqp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="." instance=ExtResource("3_egs2y")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -232.0
offset_right = 232.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("2_laybc")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PanelContainer"]
z_index = 2
layout_mode = 2
theme = ExtResource("4_7vpqp")
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_7vpqp")
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_7vpqp")
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_7vpqp")
text = "Quit"

[node name="TileMapLayer" parent="." instance=ExtResource("2_xkvi0")]
z_index = -1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="TitleHolder" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
size_flags_vertical = 0

[node name="Title" type="Label" parent="TitleHolder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -31.0
offset_right = 84.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "PeeTest"
label_settings = ExtResource("3_7vpqp")

[connection signal="window_closed" from="Settings" to="MainMenu" method="_on_settings_window_closed"]
[connection signal="pressed" from="MainMenu/PanelContainer/VBoxContainer/PlayButton" to="MainMenu" method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/VBoxContainer/SettingsButton" to="MainMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/VBoxContainer/QuitButton" to="MainMenu" method="_on_quit_pressed"]
